syntax = "proto3";

package register;

option go_package = "model/register";

message Phone {
    string Number = 2;
    string Name = 3;
    string RRN = 4;
    bool Gender = 1;
}

message Cache {
    string Number = 2;
    string Name = 3;
    string RRN = 4;
    bool Gender = 1;
    bytes Code = 5;
}

message CertCode {
    bytes Code = 1;
    bytes PublicKey = 2;
}

message Result {
    bytes ID = 1;
    string Error = 2;
}

message Account {
    bytes HashID = 1;
    bytes PrivateKey = 2;
}